// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-jfRwit jDjhft"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-jfRwit jDjhft"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-jfRwit jDjhft"
>
  <span
    className="sc-sQjNv byASUN"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-jfRwit jDjhft"
>
  <div
    className="sc-kLOYGq fLRyNB"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-jfRwit iyyCgo"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-jfRwit bGkjGs"
  size="small"
/>
`;
